--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <!-- Header mit Logo und Titel -->
   <header>
-    <img src="logo.jpg" alt="Musig Eggersriet Logo">
+    <img src="Logo.jpg" alt="Musig Eggersriet Logo">
     <h1>Musig Eggersriet - Instrumentenerkennung</h1>
   </header>
 
