--- a/index.html
+++ b/index.html
@@ -30,43 +30,48 @@
     /* Layout für den Hauptinhalt */
     header {
       background-color: #003366;
-      padding: 20px;
+      padding: 15px;
       color: white;
       text-align: center;
     }
 
     header img {
-      max-width: 100px;
+      max-width: 80px;
       vertical-align: middle;
     }
 
     header h1 {
       display: inline;
-      font-size: 2em;
-      margin-left: 20px;
+      font-size: 1.5em;
+      margin-left: 10px;
     }
 
     main {
-      padding: 20px;
+      padding: 15px;
       text-align: center;
       position: relative; /* Fixiert den Inhalt über dem transparenten Overlay */
       z-index: 1; /* Höhere Z-Ebene, damit es über dem Overlay liegt */
     }
 
+    /* Responsives Video */
     video {
+      width: 100%;
+      max-width: 640px;
+      height: auto;
       border: 2px solid #003366;
       border-radius: 8px;
-      width: 640px;
-      height: 360px;
-      background-color: #fff; /* Hintergrundfarbe für das Video-Element */
+      background-color: #fff;
     }
 
+    /* Auswahlmenü und Buttons */
     select, button {
-      font-size: 1em;
+      font-size: 1.2em;
       padding: 10px;
       margin-top: 15px;
       border-radius: 5px;
       border: 1px solid #003366;
+      width: 80%;
+      max-width: 300px;
     }
 
     button {
@@ -115,6 +120,31 @@
 
     #startScreen button:hover {
       background-color: #005599;
+    }
+
+    /* Für kleine Bildschirme, Anpassungen */
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.2em;
+      }
+
+      #startScreen h2 {
+        font-size: 1.5em;
+      }
+
+      #startScreen button {
+        font-size: 1.1em;
+        padding: 12px 25px;
+      }
+
+      select, button {
+        font-size: 1.1em;
+        width: 90%;
+      }
+
+      video {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
