--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       border: 2px solid #003366;
       border-radius: 8px;
       background-color: #fff;
+      display: none; /* Video standardmäßig ausgeblendet */
     }
 
     /* Auswahlmenü und Buttons */
@@ -122,7 +123,7 @@
       background-color: #005599;
     }
 
-    /* Modal für Tonhinweis */
+    /* Breiteres Modal für Tonhinweis */
     #soundModal {
       display: none;
       position: fixed;
@@ -141,7 +142,7 @@
       padding: 20px;
       text-align: center;
       border-radius: 8px;
-      max-width: 300px;
+      max-width: 400px; /* Breiteres Modal */
       font-size: 1.2em;
     }
 
@@ -209,7 +210,7 @@
     <h2>Erkenne das Instrument im Video</h2>
 
     <!-- Video-Element mit Autoplay -->
-    <video id="randomVideo" autoplay controls></video>
+    <video id="randomVideo" controls></video>
 
     <!-- Auswahlmenü für Instrumente -->
     <div>
@@ -266,7 +267,6 @@
     function startQuiz() {
       document.getElementById('startScreen').style.display = 'none';
       document.getElementById('quizScreen').style.display = 'block';
-      playRandomVideo();
       showSoundModal();
     }
 
@@ -278,6 +278,7 @@
       currentVideo = videos[randomIndex];
       const videoElement = document.getElementById('randomVideo');
       videoElement.src = currentVideo.src;
+      videoElement.style.display = 'block'; // Video anzeigen
       videoElement.play();
       document.getElementById('instrumentSelect').value = '---';
       document.getElementById('result').innerText = '';
@@ -317,6 +318,7 @@
 
     function closeSoundModal() {
       document.getElementById('soundModal').style.display = 'none';
+      playRandomVideo(); // Erstes Video nach Schließen des Modals starten
     }
   </script>
 
