--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div id="result"></div>
 
     <!-- Buttons für das nächste Video und zum Beenden -->
-    <button onclick="playRandomVideo()">Nächstes Video</button>
+    <button style="font-size: 1.5em; padding: 20px 40px;" onclick="playRandomVideo()">Nächstes Video</button>
     <button onclick="endGame()">Beenden</button>
   </main>
 
