--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   <div id="soundModal">
     <div class="modal-content">
       <p>Ton an!</p>
-      <button onclick="closeSoundModal()">Verstanden</button>
+      <button onclick="closeSoundModal()">OK!</button>
     </div>
   </div>
 
