--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       correctAnswers = 0;
       incorrectAnswers = 0;
       unansweredQuestions = [];
-      document.getElementById('startScreen').style.display = 'block';
+      document.getElementById('startScreen').style.display = 'flex';
       document.getElementById('endScreen').style.display = 'none';
       document.getElementById('instrumentSelect').value = '---';
       document.getElementById('result').innerText = '';
@@ -355,5 +355,6 @@
       document.getElementById('soundModal').style.display = 'none';
     }
   </script>
+
 </body>
 </html>
