--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Instrumentenerkennung - Musig Eggersriet</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <style>
-    /* Grundlegende Layout-Stile */
+    /* Grundlegendes Layout */
     body {
       font-family: 'Roboto', sans-serif;
       background-image: url('Hintergrund.jpg');
@@ -25,7 +25,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0, 0, 0, 0.6);
       z-index: -1;
     }
 
@@ -57,6 +57,7 @@
       align-items: center;
       height: 100vh;
       text-align: center;
+      background-color: rgba(0, 0, 0, 0.3);
     }
 
     #startScreen h2 {
@@ -94,6 +95,11 @@
       align-items: center;
       text-align: center;
       padding: 20px;
+      background-color: rgba(255, 255, 255, 0.85);
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      max-width: 90%;
+      margin: 0 auto;
     }
 
     video {
@@ -104,6 +110,7 @@
       border-radius: 8px;
       background-color: #fff;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      margin-top: 10px;
     }
 
     select, button {
@@ -265,5 +272,86 @@
       <button onclick="closeSoundModal()">OK!</button>
     </div>
   </div>
+
+  <!-- JavaScript bleibt unverändert -->
+  <script>
+    const videos = [
+      { src: 'Es-Horn.mp4', instrument: 'Es-Horn' },
+      { src: 'Bass.mp4', instrument: 'Bass' },
+      { src: 'Flügelhorn.mp4', instrument: 'Flügelhorn' },
+      { src: 'Bariton.mp4', instrument: 'Bariton' },
+      { src: 'Posaune.mp4', instrument: 'Posaune' },
+      { src: 'B-Cornet.mp4', instrument: 'B-Cornet' },
+      { src: 'Euphonium.mp4', instrument: 'Euphonium' },
+      { src: 'Perkussion.mp4', instrument: 'Perkussion' },
+      { src: 'Es-Cornet.mp4', instrument: 'Es-Cornet' },
+    ];
+
+    let currentVideo = null;
+    let correctAnswers = 0;
+    let incorrectAnswers = 0;
+    let unansweredQuestions = [];
+
+    function startQuiz() {
+      document.getElementById('startScreen').style.display = 'none';
+      document.getElementById('quizScreen').style.display = 'block';
+      playRandomVideo();
+      showSoundModal();
+    }
+
+    function playRandomVideo() {
+      if (currentVideo && document.getElementById('instrumentSelect').value === '---') {
+        unansweredQuestions.push(currentVideo.instrument);
+      }
+      const randomIndex = Math.floor(Math.random() * videos.length);
+      currentVideo = videos[randomIndex];
+      const videoElement = document.getElementById('randomVideo');
+      videoElement.src = currentVideo.src;
+      videoElement.play();
+      document.getElementById('instrumentSelect').value = '---';
+      document.getElementById('result').innerText = '';
+    }
+
+    function checkAnswer() {
+      const selectedInstrument = document.getElementById('instrumentSelect').value;
+      if (selectedInstrument === '---') return;
+      if (selectedInstrument === currentVideo.instrument) {
+        correctAnswers++;
+        document.getElementById('result').innerText = 'Richtig!';
+      } else {
+        incorrectAnswers++;
+        document.getElementById('result').innerText = 'Falsch!';
+      }
+    }
+
+    function endGame() {
+      document.getElementById('quizScreen').style.display = 'none';
+      document.getElementById('endScreen').style.display = 'block';
+      document.getElementById('correctAnswers').innerText = correctAnswers;
+      document.getElementById('incorrectAnswers').innerText = incorrectAnswers;
+      document.getElementById('unansweredQuestions').innerText = unansweredQuestions.length;
+    }
+
+    function restartGame() {
+      correctAnswers = 0;
+      incorrectAnswers = 0;
+      unansweredQuestions = [];
+      document.getElementById('startScreen').style.display = 'flex';
+      document.getElementById('endScreen').style.display = 'none';
+      document.getElementById('instrumentSelect').value = '---';
+      document.getElementById('result').innerText = '';
+      document.getElementById('randomVideo').pause();
+      document.getElementById('randomVideo').src = '';
+    }
+
+    function showSoundModal() {
+      document.getElementById('soundModal').style.display = 'flex';
+    }
+
+    function closeSoundModal() {
+      document.getElementById('soundModal').style.display = 'none';
+    }
+  </script>
+
 </body>
 </html>
