--- a/index.html
+++ b/index.html
@@ -102,13 +102,6 @@
       margin: 0 auto;
     }
 
-    /* Container für zentriertes Video */
-    .video-container {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-    }
-
     video {
       width: 90%;
       max-width: 640px;
@@ -243,9 +236,7 @@
   <!-- Quizbereich -->
   <main id="quizScreen" style="display: none;">
     <h2>Erkenne das Instrument im Video</h2>
-    <div class="video-container">
-      <video id="randomVideo" autoplay controls></video>
-    </div>
+    <video id="randomVideo" autoplay controls></video>
     <label for="instrumentSelect">Welches Instrument wird gespielt?</label>
     <select id="instrumentSelect">
       <option value="---">---</option>
@@ -282,6 +273,85 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- JavaScript bleibt unverändert -->
+  <script>
+    const videos = [
+      { src: 'Es-Horn.mp4', instrument: 'Es-Horn' },
+      { src: 'Bass.mp4', instrument: 'Bass' },
+      { src: 'Flügelhorn.mp4', instrument: 'Flügelhorn' },
+      { src: 'Bariton.mp4', instrument: 'Bariton' },
+      { src: 'Posaune.mp4', instrument: 'Posaune' },
+      { src: 'B-Cornet.mp4', instrument: 'B-Cornet' },
+      { src: 'Euphonium.mp4', instrument: 'Euphonium' },
+      { src: 'Perkussion.mp4', instrument: 'Perkussion' },
+      { src: 'Es-Cornet.mp4', instrument: 'Es-Cornet' },
+    ];
+
+    let currentVideo = null;
+    let correctAnswers = 0;
+    let incorrectAnswers = 0;
+    let unansweredQuestions = [];
+
+    function startQuiz() {
+      document.getElementById('startScreen').style.display = 'none';
+      document.getElementById('quizScreen').style.display = 'block';
+      playRandomVideo();
+      showSoundModal();
+    }
+
+    function playRandomVideo() {
+      if (currentVideo && document.getElementById('instrumentSelect').value === '---') {
+        unansweredQuestions.push(currentVideo.instrument);
+      }
+      const randomIndex = Math.floor(Math.random() * videos.length);
+      currentVideo = videos[randomIndex];
+      const videoElement = document.getElementById('randomVideo');
+      videoElement.src = currentVideo.src;
+      videoElement.play();
+      document.getElementById('instrumentSelect').value = '---';
+      document.getElementById('result').innerText = '';
+    }
+
+    function checkAnswer() {
+      const selectedInstrument = document.getElementById('instrumentSelect').value;
+      if (selectedInstrument === '---') return;
+      if (selectedInstrument === currentVideo.instrument) {
+        correctAnswers++;
+        document.getElementById('result').innerText = 'Richtig!';
+      } else {
+        incorrectAnswers++;
+        document.getElementById('result').innerText = 'Falsch!';
+      }
+    }
+
+    function endGame() {
+      document.getElementById('quizScreen').style.display = 'none';
+      document.getElementById('endScreen').style.display = 'block';
+      document.getElementById('correctAnswers').innerText = correctAnswers;
+      document.getElementById('incorrectAnswers').innerText = incorrectAnswers;
+      document.getElementById('unansweredQuestions').innerText = unansweredQuestions.length;
+    }
+
+    function restartGame() {
+      correctAnswers = 0;
+      incorrectAnswers = 0;
+      unansweredQuestions = [];
+      document.getElementById('startScreen').style.display = 'flex';
+      document.getElementById('endScreen').style.display = 'none';
+      document.getElementById('instrumentSelect').value = '---';
+      document.getElementById('result').innerText = '';
+      document.getElementById('randomVideo').pause();
+      document.getElementById('randomVideo').src = '';
+    }
+
+    function showSoundModal() {
+      document.getElementById('soundModal').style.display = 'flex';
+    }
+
+    function closeSoundModal() {
+      document.getElementById('soundModal').style.display = 'none';
+    }
+  </script>
+
 </body>
 </html>
